Mon Oct 19 05:54:11 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/rexml/element.rb (text=): false should be converted to string.
	  A patch by Teruo Oshida [ruby-dev:38351]

Fri Oct 16 16:42:57 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): recognize escape characters.

Fri Oct 16 16:41:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dln.c (dln_find_1): backport from trunk. [ruby-core:25802]

Fri Oct 16 09:52:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_clear_cache_for_undef): clear entries for inherited
	  methods.  [ruby-core:26074]

Fri Oct 16 09:20:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: get rid of double loading.

Thu Oct 15 14:20:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_create): cannot retry with given block.
	  [ruby-dev:39487]

Thu Oct 15 12:01:11 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (resp_text_code): accepts response codes without
	  text.  backported from trunk.  [ruby-core:24194]

Tue Oct 13 18:54:25 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/variable.rb: bug fix. additional trace definition changes the
	  option of first trace definition.

Mon Oct 12 23:24:58 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (getaddress): rescue exceptions.  [ruby-dev:39451]

Sun Oct 11 15:54:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/gdbm/gdbm.c (fgdbm_select): fixed rdoc.  a patch from Justin
	  Collins in [ruby-core:26050].

Fri Oct  9 02:39:47 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/curses/curses.c: Many functions of module Curses could cause a
	  crash if the ncurses library was not properly initialized.
	  Fix pointed out by Alexander Beisig [ruby-core:22592]
	  Functions fixed: attroff, attron, attrset, bkgd, bkgdset,
	  can_change_color, close_screen, closed, color_content, curs_set,
	  def_prog_mode, delch, deleteln, getmouse, getstr, has_colors,