@@ -1,3 +1,8 @@
+Tue Oct 20 16:46:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/win32.h (finite, scalb): inline'ed non-standard
+	  identifier macros.  [ruby-core:2234]
+
 Mon Oct 19 05:54:11 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/rexml/element.rb (text=): false should be converted to string.
